8211393: Memory leak issue on awt_InputMethod.c

Reviewed-by: naoto, clanger